--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ function createTable(sizeField){
                 btn[x].src = "https://lightshow.od.ua/o.png";
             }
             else{
-                btn[x].src = "/kres/e.png";
+                btn[x].src = "kres/e.png";
             }
         }
     }
