--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@ function createTable(sizeField){
         var btn = document.getElementsByClassName("imgArr");
         for (var x = 0; x < btn.length; x++) {
             if (field[x] == 1){
-                btn[x].src = "https://lightshow.od.ua/x.png";
+                btn[x].src = "https://balletlight.od.ua/x.png";
             }
             else if(field[x] == 2){
-                btn[x].src = "https://lightshow.od.ua/o.png";
+                btn[x].src = "https://balletlight.od.ua/o.png";
             }
             else{
-                btn[x].src = "https://lightshow.od.ua/e.png";
+                btn[x].src = "https://balletlight.od.ua/e.png";
             }
         }
     }
